--- a/portfolio/Project/04-FoodDigger.html
+++ b/portfolio/Project/04-FoodDigger.html
@@ -26,7 +26,7 @@
         </div> <!-- // headerWrap -->
 
         <div id="Contents">
-            <div class="sub_img box_width"><img src="../img/FOODDIGGER.png"></div>
+            <div class="sub_img img_long box_width"><img src="../img/FOODDIGGER.png"></div>
 		
             <div class="top_Btn">
 				<a href="#header">
