--- a/portfolio/Project/03-Hompage.html
+++ b/portfolio/Project/03-Hompage.html
@@ -26,7 +26,7 @@
         </div> <!-- // headerWrap -->
 
         <div id="Contents">
-            <div class="sub_img img_long box_width"><img src="../img/HOMEPAGE_RENEWAL.png"></div>
+            <div class="sub_img img_long box_width"><img src="../img/HOMEPAGE.png"></div>
 		
             <div class="top_Btn">
 				<a href="#header">
