--- a/portfolio/Project/01-Hotsunglass.html
+++ b/portfolio/Project/01-Hotsunglass.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Hotsunglass-01 (ios Desgin)</title>
@@ -8,33 +9,37 @@
 	<script src="../js/jquery-1.12.4.js"></script>
 	<script src="../js/common.js"></script>
 </head>
+
 <body>
 	<div id="wrap">
 		<div id="headerWrap">
 			<div id="header" class="box_width">
 				<h1 class="logo"><a href="../index.html"><img src="../img/Logo@1x.png" alt=""></a></h1>
-				
+
 				<div class="gnb">
 					<ul class="g_list">
 						<li class="on"><a href="../index.html">Portfolio</a></li>
 						<li><a href="../about.html">About</a></li>
 						<li><a href="../contact.html">Contact</a></li>
 					</ul>
-                </div> <!-- // menu -->
+				</div> <!-- // menu -->
 
-            </div> <!-- // header -->
-        </div> <!-- // headerWrap -->
+			</div> <!-- // header -->
+		</div> <!-- // headerWrap -->
 
-        <div id="Contents">
-            <div class="sub_img img_long box_width"><img src="../img/HOTSUNGLASS.png"></div>
-		
-            <div class="top_Btn">
+		<div id="Contents">
+			<div class="sub_img img_long box_width"><img src="../img/HOTSUNGLASS.png"></div>
+			<div class="link-txt-box"> <!--// 사이트 링크 이동 -->
+				<a href="./test.html" class="link-txt">사이트 테스트</a>
+			</div>
+			<div class="top_Btn">
 				<a href="#header">
 					<span class="arrow">↑</span>
 					<span class="back-to-top">Back to Top</span>
 				</a>
 			</div>
-        </div> <!-- // Contents -->
-    </div> <!-- // Wrap -->
+		</div> <!-- // Contents -->
+	</div> <!-- // Wrap -->
 </body>
+
 </html>
