--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>PORTFOLIO</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <script src="https://kit.fontawesome.com/ee92c86fad.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>  <!-- JQuery를 사용 할 때 js파일과 함께 추가하세요.(제이쿼리는 $로 시작하는 문법)  --> 
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>  <!-- JQuery를 사용 할 때 js파일과 함께 추가하세요.(제이쿼리는 $로 시작하는 문법)  -->
     <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <script src="assets/js/main.js"></script>
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="28x28" href="./assets/images/Quokka.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
