--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,7 +43,7 @@
             <section class="sc-contact">
                 <div class="group-contact">
                     <div class="ambition-area">
-                       <p>Lorem ipsum dolor sit amet consectetur. Vitae eleifend tristique ullamcorper sit feugiat. Dolor egestas cum nullam a accumsan bibendum. Mattis scelerisque ut sed nec risus sagittis libero hendrerit. Id a pellentesque pharetra dictum ante nec nullam lectus id. Potenti a eleifend ultricies faucibus.</p>
+                       <p>Lorem ipsum dolor sit amet consectetur. Vitae eleifend tristique ullamcorper sit feugiat. Dolor egestas cum nullam a accumsan bibendum. Mattis scelerisque ut sed nec risus sagittis libero hendrerit. Id a pellentesque pharetra dictum ante nec nullam faucibus.</p>
                     </div>                   
                 </div>
             </section>
