--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>  <!-- JQuery를 사용 할 때 js파일과 함께 추가하세요.(제이쿼리는 $로 시작하는 문법)  -->
     <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <script src="assets/js/main.js"></script>
-    <link rel="icon" type="image/png" sizes="28x28" href="./assets/images/Quokka.png">
+    <link rel="icon" type="image/png" sizes="28x28" href="./assets/images/Favicon_Quokka.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
