--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,7 +43,7 @@
             <section class="sc-contact">
                 <div class="group-contact">
                     <div class="ambition-area">
-                       <p>Lorem ipsum dolor sit amet consectetur. Vitae eleifend tristique ullamcorper sit feugiat. Dolor egestas cum nullam a accumsan bibendum. Mattis scelerisque ut sed nec risus sagittis libero hendrerit. Id a pellentesque pharetra dictum ante nec nullam faucibus.</p>
+                       <p>사용자 행동과 맥락을 관찰해 문제를 구조화하고, 핵심을 시각적으로 정리해 자연스러운 흐름을 만듭니다.<br>데이터 기반 인사이트로 인터페이스를 단순화하고, 작은 인터랙션까지 의미를 담아 사용자와 브랜드를 연결하는 UI/UX를 지향합니다.</p>
                     </div>                   
                 </div>
             </section>
@@ -71,7 +71,7 @@
                     <div id="group-project" class="group-project">
                         <ul class="project-list">
                             <li class="project-item on" data-filter="Web">
-                                <a href="https://deukchan.github.io/naver/" class="img-box">
+                                <a href="Project/SAMSUNG-E&A.html" class="img-box">
                                     <img src="./assets/images/삼성E&A.png" alt="플랜트 배치 자동화 설계 툴">
                                 </a>
                                 <div class="txt-wrap">
@@ -83,7 +83,7 @@
                                 </div>
                             </li>
                             <li class="project-item on" data-filter="Web, Mobile">
-                                <a href="https://deukchan.github.io/seoul/" class="img-box">
+                                <a href="Project/TOBESOFT-AX.html" class="img-box">
                                     <img src="./assets/images/TobesoftAX.png" alt="자사 홈페이지 리뉴얼">
                                 </a>
                                 <div class="txt-wrap">
@@ -97,7 +97,7 @@
                                 </div>
                             </li>
                             <li class="project-item on" data-filter="Web, Mobile">
-                                <a href="" class="img-box">
+                                <a href="Project/DXChart.html" class="img-box">
                                     <img src="./assets/images/DXChart.png" alt="DXChart 제품 사이트 구축">
                                 </a>
                                 <div class="txt-wrap">
@@ -125,7 +125,7 @@
                                 </div>
                             </li>
                             <li class="project-item on" data-filter="Web, Mobile">
-                                <a href="" class="img-box">
+                                <a href="Project/Blueprintlab.html" class="img-box">
                                     <img src="./assets/images/BluePrintLab.png" alt="자사 홈페이지 리뉴얼">
                                 </a>
                                 <div class="txt-wrap">
@@ -139,12 +139,12 @@
                                 </div>
                             </li>
                             <li class="project-item on" data-filter="Web, Mobile">
-                                <a href="" class="img-box">
+                                <a href="Project/MASQ.html" class="img-box">
                                     <img src="./assets/images/MASQ.png" alt="AI 얼굴인식 및 가상착용 앱"  >
                                 </a>
                                 <div class="txt-wrap">
                                     <h3 class="title">MASQ</h3>
-                                    <p class="desc">얼굴인식과 문진데이터를 기반으로 개인에게 최적화된 안경을 추천하는 AI 애플리케이션  </p>
+                                    <p class="desc">얼굴인식과 문진데이터를 기반으로 개인에게 최적화된 안경을 추천하는 AI 애플리케이션</p>
                                     <div class="spec">
                                         <span>AI</span>
                                         <span>기획</span>
@@ -153,7 +153,7 @@
                                 </div>
                             </li>
                             <li class="project-item on" data-filter="Mobile">
-                                <a href="" class="img-box">
+                                <a href="Project/HIFIT.html" class="img-box">
                                     <img src="./assets/images/HIFIT.png" alt="AI 얼굴인식 및 온라인 스토어 앱"  >
                                 </a>
                                 <div class="txt-wrap">
@@ -182,7 +182,7 @@
                         <!-- 메일 아이콘 -->
                         <path d="M22 7L13.009 12.727C12.7039 12.9042 12.3573 12.9976 12.0045 12.9976C11.6517 12.9976 11.3051 12.9042 11 12.727L2 7M4 4H20C21.1046 4 22 4.89543 22 6V18C22 19.1046 21.1046 20 20 20H4C2.89543 20 2 19.1046 2 18V6C2 4.89543 2.89543 4 4 4Z" stroke="#111111" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="#fff"/>
                         </svg>
-                        <span>00000@naver.com</span>
+                        <span>yr5282@naver.com</span>
                     </div>
 
                     <div class="contact-item">
@@ -190,7 +190,7 @@
                         <!-- 전화 아이콘 -->
                         <path d="M13.832 16.568C14.0385 16.6628 14.2712 16.6845 14.4917 16.6294C14.7122 16.5744 14.9073 16.4458 15.045 16.265L15.4 15.8C15.5863 15.5516 15.8279 15.35 16.1056 15.2111C16.3833 15.0723 16.6895 15 17 15H20C20.5304 15 21.0391 15.2107 21.4142 15.5858C21.7893 15.9609 22 16.4696 22 17V20C22 20.5304 21.7893 21.0391 21.4142 21.4142C21.0391 21.7893 20.5304 22 20 22C15.2261 22 10.6477 20.1036 7.27208 16.7279C3.89642 13.3523 2 8.7739 2 4C2 3.46957 2.21071 2.96086 2.58579 2.58579C2.96086 2.21071 3.46957 2 4 2H7C7.53043 2 8.03914 2.21071 8.41421 2.58579C8.78929 2.96086 9 3.46957 9 4V7C9 7.31049 8.92771 7.61672 8.78885 7.89443C8.65 8.17214 8.44839 8.41371 8.2 8.6L7.732 8.951C7.54842 9.09118 7.41902 9.29059 7.36579 9.51535C7.31256 9.74012 7.33878 9.97638 7.44 10.184C8.80668 12.9599 11.0544 15.2048 13.832 16.568Z" stroke="#111111" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="#fff"/>
                         </svg>
-                        <span>010-0000-0000</span>
+                        <span>010-5696-5282</span>
                     </div>
                 </div>
 
