--- a/portfolio/Project/Blueprintlab.html
+++ b/portfolio/Project/Blueprintlab.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
             <div class="group-header">
-                <h1 class="logo"><a href="../index.html">YOON YERANG</a></h1>
+                <h1><a href="../index.html">YOON YERANG</a></h1>
                  <nav class="menu">
                     <ul>
                         <li><a href="../index.html#sc-project">PROJECT</a></li>
