--- a/portfolio/Project/DXChart.html
+++ b/portfolio/Project/DXChart.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
             <div class="group-header">
-                <h1 class="logo"><a href="../index.html">YOON YERANG</a></h1>
+                <h1><a href="../index.html">YOON YERANG</a></h1>
                  <nav class="menu">
                     <ul>
                         <li><a href="../index.html#sc-project">PROJECT</a></li>
@@ -31,7 +31,7 @@
 
             <!-- 리스트 툴 -->
             <div class="por_detail">
-                <p><img src="../assets/images/농협물류Careers_detail.png" alt="" /></p>
+                <p><img src="../assets/images/DXChart_detail.webp" alt="" /></p>
             </div>
         </article>
     </section>
