--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,6 +78,7 @@
                                     <h3 class="title">SAMSUNG E&A</h3>
                                     <p class="desc">삼성 E&A 디지털 트윈 기반 플랜트 배치 자동화 설계 툴</p>
                                     <div class="spec">
+                                        <span>APP</span>
                                         <span>UIUX디자인</span>
                                     </div>
                                 </div>
@@ -90,9 +91,9 @@
                                     <h3 class="title">TOBESOFT AX</h3>
                                     <p class="desc">TOBESOFT AX의 비전과 기술 경쟁력을 효과적으로 전달하며 고객 중심의 정보 구조로<br>신뢰도 높은 디지털 접점을 구축하기 위한 리뉴얼</p>
                                     <div class="spec">
+                                        <span>반응형</span>
                                         <span>기획</span>
-                                        <span>UIUX</span>
-                                        <span>반응형 디자인</span>
+                                        <span>UIUX디자인</span>
                                     </div>
                                 </div>
                             </li>
@@ -146,6 +147,8 @@
                                     <h3 class="title">MASQ</h3>
                                     <p class="desc">얼굴인식과 문진데이터를 기반으로 개인에게 최적화된 안경을 추천하는 AI 애플리케이션</p>
                                     <div class="spec">
+                                        <span>iOS</span>
+                                        <span>APP</span>
                                         <span>AI</span>
                                         <span>기획</span>
                                         <span>UIUX디자인</span>
@@ -160,6 +163,8 @@
                                     <h3 class="title">HIFIT</h3>
                                     <p class="desc">AR/VR기반 가상 착용 경험을 제공하는 온라인 안경 커머스 애플리케이션</p>
                                     <div class="spec">
+                                        <span>iOS</span>
+                                        <span>App</span>
                                         <span>AR/VR</span>
                                         <span>기획</span>
                                         <span>UIUX디자인</span>
