--- a/portfolio/Project/MASQ.html
+++ b/portfolio/Project/MASQ.html
@@ -31,7 +31,7 @@
 
             <!-- 리스트 툴 -->
             <div class="por_detail">
-                <p><img src="../assets/images/MASQ _detail.webp" alt="" /></p>
+                <p><img src="../assets/images/MASQ_detail.webp" alt="" /></p>
             </div>
         </article>
     </section>
