--- a/portfolio/Project/MASQ.html
+++ b/portfolio/Project/MASQ.html
@@ -8,6 +8,7 @@
   <script src="../assets/js/main.js"></script>
   <link rel="stylesheet" href="../assets/css/Project.css">
   <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="icon" type="image/png" sizes="28x28" href="../assets/images/Favicon_Quokka.png">
 </head>
 <body>
     <header class="header">
