--- a/portfolio/Project/농협물류Careers.html
+++ b/portfolio/Project/농협물류Careers.html
@@ -4,10 +4,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8" />
   <title>Project Preview</title>
-  <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>   <!-- JQuery를 사용 할 때 js파일과 함께 추가하세요.(제이쿼리는 $로 시작하는 문법)  -->
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>   
+  <!-- JQuery를 사용 할 때 js파일과 함께 추가하세요.(제이쿼리는 $로 시작하는 문법)  -->
   <script src="../assets/js/main.js"></script>
   <link rel="stylesheet" href="../assets/css/Project.css">
   <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="icon" type="image/png" sizes="28x28" href="../assets/images/Favicon_Quokka.png">
 </head>
 <body>
     <header class="header">
